# trace

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GRPC_QUICKSTART.md  MINIO_README.md  README.md  SERVICE_INSTALL.md  build.rs  commit_minio_csv_feature.txt  install_service.sh  run_grpc.sh  run_minio.sh  run_minio_analysis.sh  run_minio_csv.sh  trace-grpc.service  uninstall_service.sh
.github/workflows/: rust.yml
benches/: parser_benchmark.rs
doc/: class_diagram.md  functions.md  grpc_server.md  highperf_implementation.md  highperf_parsing.md  highperf_user_guide.md  migration_tool.md  minio_integration.md  overview.md  parquet_migration_code.md  parquet_migration_diagrams.md  parquet_migration_tech_summary.md  performance_test.md  realtime_web_api.md  realtime_web_design.md  realtime_web_implementation.md  technical.md
examples/: GRPC_CLIENT.md  grpc_client.py  grpc_csv_example.md  grpc_filter_example.md  grpc_filter_test.py
proto/: log_processor.proto
src/: lib.rs  main.rs
src/commands/: minio.rs  mod.rs
src/grpc/: client.rs  mod.rs  server.rs
src/migration/: mod.rs  parquet_migrator.rs
src/models/: block.rs  mod.rs  trace_item.rs  trace_type.rs  ufs.rs  ufscustom.rs
src/output/: charts.rs  csv.rs  mod.rs  parquet.rs  performance.rs  plotters_charts.rs  reader.rs  statistics.rs
src/parsers/: benchmark.rs  log.rs  log_async.rs  log_common.rs  log_high_perf.rs  mod.rs
src/processors/: benchmark.rs  block.rs  mod.rs  ufs.rs  ufscustom.rs
src/python/: visualize_parquet.py
src/realtime/: analyzer.rs  dashboard.rs  mod.rs  monitor.rs  streaming.rs
src/storage/: minio_client.rs
src/utils/: compression.rs  constants.rs  encoding.rs  filter.rs  iteration.rs  latency.rs  logger.rs  mod.rs  performance.rs
src/web/: simple.rs
src/web/static/: dashboard.js  echarts.min.js  index.html  styles.css
