[package]
name = "trace"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "55.0.0"
bincode = { version = "2.0.1", features = ["serde"] }
charming = { version = "0.4.0", features = ["ssr", "html", "image"] }
chrono = "0.4.40"
crossbeam-channel = "0.5.15"
futures = "0.3.30"
lazy_static = "1.4.0"
memmap2 = "0.9.5"
num_cpus = "1.16.0"
parquet = "55.0.0"
plotters = "0.3.7"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.36.0", features = ["full"] }
