[package]
name = "trace"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "55.1.0"
bincode = { version = "2.0.1", features = ["serde"] }
chardetng = "0.1.17"
chrono = "0.4.41"
crossbeam-channel = "0.5.15"
csv = "1.3.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
lazy_static = "1.5.0"
memmap2 = "0.9.5"
num_cpus = "1.17.0"
parquet = "55.1.0"
plotters = "0.3.7"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
rust-s3 = "0.35"
bytes = "1.10"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
