[package]
name = "trace"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "55.1.0"
bincode = { version = "2.0.1", features = ["serde"] }
chardetng = "0.1.17"
chrono = "0.4.41"
crossbeam-channel = "0.5.15"
csv = "1.3.0"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
flate2 = "1.0"
lazy_static = "1.5.0"
memmap2 = "0.9.5"
num_cpus = "1.17.0"
parquet = "55.1.0"
plotters = "0.3.7"
prost = "0.13"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
rust-s3 = "0.35"
serde = { version = "1.0.219", features = ["derive"] }
sevenz-rust = "0.6"
tar = "0.4"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
xz2 = "0.1"
zip = "2.1"

[build-dependencies]
tonic-build = "0.12"


[profile.release]
lto = false
codegen-units = 16
panic = "abort"
opt-level = 3
